@@ -917,7 +917,8 @@ new_line_sorts_after (struct line_info *new_line, struct line_info *line)
 {
   return (new_line->address > line->address
 	  || (new_line->address == line->address
-	      && new_line->end_sequence < line->end_sequence));
+	      && (new_line->line > line->line
+		  || new_line->end_sequence < line->end_sequence)));
 }
 
 
